--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,13 @@
 			<version>2.5.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>3.13.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
